# PolicyChatbot-RAG

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: main.py  worker.py
app/api/: __init__.py
app/api/routes/: __init__.py  chat.py  health.py  uploads.py
app/core/: __init__.py  config.py  globals.py  logger_config.py
app/schemas/: chat.py  uploads.py
app/services/: chunker.py  embeddings.py  generator.py  ingest.py  parser.py  retriever.py  s3_upload.py  vector_store.py
app/tasks/: ingestion_tasks.py
