[project]
name = "policychatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "pydantic-settings",
    "python-multipart",
    "pypdf",
    "striprtf",
    "chromadb",
    "openai",
    "flashrank>=0.2.10",
]
